# SfM

./: CMakeLists.txt  README.md  SfMPipeline.cpp  SfMPipeline.h  main.cpp
UI/: menu.cpp  menu.h  uiconfig.h
data/Herz-Jesus-P8/gt_dense_cameras/: 0001.jpg.camera  0003.jpg.camera  0004.jpg.camera  0005.jpg.camera  0007.jpg.camera
data/subset/: K.txt
helper/: DataOps.cpp  DataOps.h  Features.cpp  Features.h  cameraCalibration.cpp  cameraCalibration.h  ccv.cpp  ccv.h  config.h  extractors.cpp  extractors.h  object.cpp  object.h  visualiser.cpp  visualiser.h
helper/ccv/: EssentialMatrix.cpp  EssentialMatrix.h  RecoverPose.cpp  RecoverPose.h
helper/templates/: templates.h
